# XLM

./: Cargo.toml  README.md  lib.rs  main.rs
docs/: PROJECT_PLAN.md
src/: lib.rs  main.rs
src/domain/: concept.rs  mod.rs  relation.rs  source.rs
src/ingestion/: llm_client.rs  mod.rs  pipeline.rs  prompt.rs  response.rs  validator.rs
src/memory/: graph.rs  mod.rs  persistence.rs
src/reasoning/: explainer.rs  mod.rs  query.rs
src/resources/: mod.rs  wikidata.rs
src/utils/: mod.rs  slug.rs  text_hash.rs
