[package]
name = "xlm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1.10"
parking_lot = "0.12"
rayon = "1.8"
uuid = { version = "1.6", features = ["serde", "v4"] }
petgraph = "0.6"
sha2 = "0.10"
once_cell = "1.19"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
